--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
   },
