--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.1",
+    "https": "^1.0.0",
+    "mongoose": "^5.11.14",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
